--- a/index.html
+++ b/index.html
@@ -56,11 +56,9 @@
     </div>
     <div class="social w-full float-left mb-[5px]">
     <ul>
-    <li class="mr-[8px] inline-block"><a class="text-[#333]" href="#"><img class="svg" src="assets/img/svg/social/facebook.svg" alt=""></a></li>
-    <li class="mr-[8px] inline-block"><a class="text-[#333]" href="#"><i class="fa fa-telegram" style="font-size:36px"></i></a></li>
-    <li class="mr-[8px] inline-block"><a class="text-[#333]" href="#"><img class="svg" src="assets/img/svg/social/instagram.svg" alt=""></a></li>
-    <li class="mr-[8px] inline-block"><a class="text-[#333]" href="#"><img class="svg" src="assets/img/svg/social/dribbble.svg" alt=""></a></li>
-    <li class="inline-block"><a class="text-[#333]" href="#"><img class="svg" src="assets/img/svg/social/tik-tok.svg" alt=""></a></li>
+        <li class="mr-[1px] inline-block"><a class="text-[#333]" href="https://t.me/python_dev_sh"><i  class="fa fa-telegram" style="font-size:24px"></i></a></li>
+        <li class="mr-[1px] inline-block"><a class="text-[#333]" href="https://github.com/shahnozahaydarova"><i  class="fa fa-github" style="font-size:24px"></i></a></li>
+        <li class="mr-[1px] inline-block"><a class="text-[#333]" href="https://www.instagram.com/__khaydarova_sh"><i  class="fa fa-instagram" style="font-size:24px"></i></a></li>
     </ul>
     </div>
     
